--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <li><a href="#contact">联系方式</a></li>
             </ul>
         </nav>
+        <!-- 主题切换按钮 -->
+        <button id="theme-toggle">切换主题</button>
     </header>
 
     <main>
@@ -61,5 +63,8 @@
     <footer>
         <p>&copy; 2024 姓名. 版权所有。</p>
     </footer>
+
+    <!-- JavaScript 脚本 -->
+    <script src="script.js"></script>
 </body>
 </html>
