--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 </head>
 <body>
     <header>
-        <h1>姓名</h1>
-        <p>职称 | 所属机构</p>
+        <h1>Hengyi Yin</h1>
+        <p>BEng | Mcgill University</p>
         <nav>
             <ul>
-                <li><a href="#about">关于我</a></li>
-                <li><a href="#research">研究方向</a></li>
-                <li><a href="#publications">发表论文</a></li>
-                <li><a href="#contact">联系方式</a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#research">Research Area</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#contact">Contacts</a></li>
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
-        <button id="theme-toggle">切换主题</button>
+        <button id="theme-toggle">Style</button>
     </header>
 
     <main>
         <!-- 关于我 -->
         <section id="about">
-            <h2>关于我</h2>
+            <h2>About me</h2>
             <p>这里写你的简介，包括教育背景、工作经历等。</p>
         </section>
 
         <!-- 研究方向 -->
         <section id="research">
-            <h2>研究方向</h2>
+            <h2>Research Area</h2>
             <ul>
                 <li>研究方向一</li>
                 <li>研究方向二</li>
@@ -43,7 +43,7 @@
 
         <!-- 发表论文 -->
         <section id="publications">
-            <h2>发表论文</h2>
+            <h2>Publications</h2>
             <ul>
                 <li>论文标题一，期刊名称，年份。</li>
                 <li>论文标题二，期刊名称，年份。</li>
@@ -53,16 +53,18 @@
 
         <!-- 联系方式 -->
         <section id="contact">
-            <h2>联系方式</h2>
-            <p>邮箱: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>研究主页: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+            <h2>Contacts</h2>
+            <p>Email: <a href="mailto:your.email@example.com">hengyi.yin@mail.mcgill.ca</a></p>
+            <!-- <p>研究主页: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
             <!-- 可以添加社交媒体链接 -->
         </section>
     </main>
-
+    
+<!-- 
     <footer>
-        <p>&copy; 2024 姓名. 版权所有。</p>
+        <p>&copy; 2024 Hengyi Yin. Copyright。</p>
     </footer>
+-->
 
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
