--- a/index.html
+++ b/index.html
@@ -3,68 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rabbit burrow - 姓名</title>
+    <title>Personal Homepage - Your Name</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 可以添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Hengyi Yin</h1>
-        <p>BEng | Mcgill University</p>
-        <nav>
-            <ul>
-                <li><a href="#about">About me</a></li>
-                <li><a href="#research">Research Area</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#contact">Contacts</a></li>
-            </ul>
-        </nav>
+        <h1>Your Name</h1>
+        <p>Title | Institution</p>
         <!-- 主题切换按钮 -->
-        <button id="theme-toggle">Style</button>
+        <button id="theme-toggle">Switch to Dark Mode</button>
     </header>
 
-    <main>
-        <!-- 关于我 -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>这里写你的简介，包括教育背景、工作经历等。</p>
-        </section>
-
-        <!-- 研究方向 -->
-        <section id="research">
-            <h2>Research Area</h2>
-            <ul>
-                <li>研究方向一</li>
-                <li>研究方向二</li>
-                <li>研究方向三</li>
-            </ul>
-        </section>
-
-        <!-- 发表论文 -->
-        <section id="publications">
-            <h2>Publications</h2>
-            <ul>
-                <li>论文标题一，期刊名称，年份。</li>
-                <li>论文标题二，期刊名称，年份。</li>
-                <li>论文标题三，期刊名称，年份。</li>
-            </ul>
-        </section>
-
-        <!-- 联系方式 -->
-        <section id="contact">
-            <h2>Contacts</h2>
-            <p>Email: <a href="mailto:your.email@example.com">hengyi.yin@mail.mcgill.ca</a></p>
-            <!-- <p>研究主页: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
+    <div class="container">
+        <!-- 侧边栏 -->
+        <aside class="sidebar">
+            <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+            <h2>Your Name</h2>
+            <p><strong>Title:</strong> Your Title</p>
+            <p><strong>Institution:</strong> Your Institution</p>
+            <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
             <!-- 可以添加社交媒体链接 -->
-        </section>
-    </main>
-    
-<!-- 
+            <div class="social-links">
+                <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
+                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+            </div>
+        </aside>
+
+        <!-- 主要内容 -->
+        <main>
+            <!-- 关于我 -->
+            <section id="about">
+                <h2>About Me</h2>
+                <p>Write your introduction here, including your educational background, work experience, etc.</p>
+            </section>
+
+            <!-- 研究方向 -->
+            <section id="research">
+                <h2>Research Interests</h2>
+                <ul>
+                    <li>Research Area One</li>
+                    <li>Research Area Two</li>
+                    <li>Research Area Three</li>
+                </ul>
+            </section>
+
+            <!-- 发表论文 -->
+            <section id="publications">
+                <h2>Publications</h2>
+                <ul>
+                    <li>Title of Paper One, Journal Name, Year.</li>
+                    <li>Title of Paper Two, Journal Name, Year.</li>
+                    <li>Title of Paper Three, Journal Name, Year.</li>
+                </ul>
+            </section>
+
+            <!-- 联系方式 -->
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+                <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+                <!-- 可以添加社交媒体链接 -->
+            </section>
+        </main>
+    </div>
+
     <footer>
-        <p>&copy; 2024 Hengyi Yin. Copyright。</p>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
--->
 
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
