--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <!-- 侧边栏 -->
         <aside class="sidebar">
-            <img src="images/profile.jpg" alt="Profile Picture" class="profile-pic">
+            <img src="_images/me.jpeg" alt="Profile Picture" class="profile-pic">
             <h2>Your Name</h2>
             <p><strong>Title:</strong> Your Title</p>
             <p><strong>Institution:</strong> Your Institution</p>
