--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <!-- 侧边栏 -->
         <aside class="sidebar">
-            <img src="_images/me.jpeg" alt="Profile Picture" class="profile-pic">
+            <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
             <h2>Your Name</h2>
             <p><strong>Title:</strong> Your Title</p>
             <p><strong>Institution:</strong> Your Institution</p>
@@ -69,11 +69,11 @@
             </section>
         </main>
     </div>
-<!--
+
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
--->
+
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
 </body>
