--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- 页面内容 -->
     <header>
         <h1>Your Name</h1>
         <p>Title | Institution</p>
@@ -64,16 +65,16 @@
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+                <!-- <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
                 <!-- 可以添加社交媒体链接 -->
             </section>
         </main>
     </div>
-
+    <!--
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-
+    -->
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
 </body>
