--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 页面内容 -->
     <header>
         <h1>Your Name</h1>
         <p>Title | Institution</p>
@@ -51,30 +50,29 @@
                 </ul>
             </section>
 
-            <!-- 发表论文 -->
-            <section id="publications">
-                <h2>Publications</h2>
-                <ul>
-                    <li>Title of Paper One, Journal Name, Year.</li>
-                    <li>Title of Paper Two, Journal Name, Year.</li>
-                    <li>Title of Paper Three, Journal Name, Year.</li>
-                </ul>
-            </section>
-
             <!-- 联系方式 -->
             <section id="contact">
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                <!-- <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
+                <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
                 <!-- 可以添加社交媒体链接 -->
+            </section>
+
+            <!-- 添加链接到其他页面 -->
+            <section id="additional-pages">
+                <h2>Additional Pages</h2>
+                <ul>
+                    <li><a href="cv.html">Curriculum Vitae</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                </ul>
             </section>
         </main>
     </div>
-    <!--
+
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-    -->
+
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
 </body>
