--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <header>
         <h1>Your Name</h1>
         <p>Title | Institution</p>
+        <!-- 导航链接 -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">Curriculum Vitae</a></li>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </nav>
         <!-- 主题切换按钮 -->
         <button id="theme-toggle">Switch to Dark Mode</button>
     </header>
@@ -25,6 +33,14 @@
             <p><strong>Institution:</strong> Your Institution</p>
             <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
             <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+            <!-- 导航链接 -->
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">Curriculum Vitae</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                </ul>
+            </nav>
             <!-- 可以添加社交媒体链接 -->
             <div class="social-links">
                 <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
@@ -56,15 +72,6 @@
                 <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
                 <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
                 <!-- 可以添加社交媒体链接 -->
-            </section>
-
-            <!-- 添加链接到其他页面 -->
-            <section id="additional-pages">
-                <h2>Additional Pages</h2>
-                <ul>
-                    <li><a href="cv.html">Curriculum Vitae</a></li>
-                    <li><a href="publications.html">Publications</a></li>
-                </ul>
             </section>
         </main>
     </div>
