--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV - Your Name</title>
+    <title>Curriculum Vitae - Your Name</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 可以添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -13,8 +13,6 @@
         <div class="header-content">
             <h1>Your Name</h1>
             <p>Title | Institution</p>
-            <!-- 主题切换按钮 -->
-            <button id="theme-toggle">Switch to Dark Mode</button>
         </div>
         <!-- 导航链接 -->
         <nav class="main-nav">
@@ -24,6 +22,8 @@
                 <li><a href="publications.html">Publications</a></li>
             </ul>
         </nav>
+        <!-- 主题切换按钮 -->
+        <button id="theme-toggle">Switch to Dark Mode</button>
     </header>
 
     <div class="container">
