--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Homepage - Your Name</title>
+    <title>Personal Homepage - Hengyi Yin</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 可以添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Your Name</h1>
-            <p>Title | Institution</p>
+            <h1>Hengyi Yin</h1>
+            <p>B.Eng | McGill University</p>
         </div>
         <!-- 导航链接 -->
         <nav class="main-nav">
@@ -47,32 +47,32 @@
             <!-- 关于我 -->
             <section id="about">
                 <h2>About Me</h2>
-                <p>Write your introduction here, including your educational background, work experience, etc.</p>
+                <p>My name is Hengyi Yin and welcome to my personal website!</p>
             </section>
 
             <!-- 研究方向 -->
             <section id="research">
                 <h2>Research Interests</h2>
                 <ul>
-                    <li>Research Area One</li>
-                    <li>Research Area Two</li>
-                    <li>Research Area Three</li>
+                    <li>Deep learning</li>
+                    <li>Large language model</li>
+                    <li>Reinforce learning</li>
                 </ul>
             </section>
 
             <!-- 联系方式 -->
             <section id="contact">
                 <h2>Contact</h2>
-                <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-                <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+                <p>Email: <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
+                <!-- <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.co</a></p> -->
             </section>
         </main>
     </div>
-
+<!--
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-
+-->
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
 </body>
