--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <!-- 侧边栏 -->
         <aside class="sidebar">
             <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-            <h2>Your Name</h2>
-            <p><strong>Title:</strong> Your Title</p>
-            <p><strong>Institution:</strong> Your Institution</p>
+            <h2>Hengyi Yin</h2>
+            <p><strong>Title:</strong> B.Eng</p>
+            <p><strong>Institution:</strong> McGill University</p>
             <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
+            <!-- <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
             <!-- 社交媒体链接 -->
             <div class="social-links">
-                <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
-                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
             </div>
         </aside>
 
