--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publications - Your Name</title>
+    <title>Publications - Hengyi Yin</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 可以添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Your Name</h1>
-            <p>Title | Institution</p>
+            <h1>Hengyi Yin</h1>
+            <p>B.Eng | McGill University</p>
         </div>
         <!-- 导航链接 -->
         <nav class="main-nav">
@@ -30,15 +30,15 @@
         <!-- 侧边栏 -->
         <aside class="sidebar">
             <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-            <h2>Your Name</h2>
-            <p><strong>Title:</strong> Your Title</p>
-            <p><strong>Institution:</strong> Your Institution</p>
-            <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <h2>Hengyi Yin</h2>
+            <p><strong> B.Eng</p>
+            <p></strong> McGill University</p>
+            <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
             <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
             <!-- 社交媒体链接 -->
             <div class="social-links">
-                <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
-                <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
             </div>
         </aside>
 
