--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>Hengyi Yin</h2>
             <p><strong>Title:</strong> B.Eng</p>
             <p><strong>Institution:</strong> McGill University</p>
-            <p><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p><strong>Email:</strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
             <!-- <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
             <!-- 社交媒体链接 -->
             <div class="social-links">
