--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">Curriculum Vitae</a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
             </ul>
         </nav>
