--- a/publications.html
+++ b/publications.html
@@ -5,37 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Hengyi Yin</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- 可以添加 Google Fonts -->
+    <!-- 添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- 侧边栏 -->
-        <aside class="sidebar">
-            <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-            <h2>Hengyi Yin</h2>
-            <p><strong> B.Eng</p>
-            <p></strong> McGill University</p>
-            <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
-            <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
-            <!-- 社交媒体链接 -->
-            <div class="social-links">
-                <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
-            </div>
-        </aside>
-    
-    <header>
+    <aside class="sidebar">
+        <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
+        <h2>Hengyi Yin</h2>
+        <p><strong>B.Eng</strong></p>
+        <p><strong>McGill University</strong></p>
+        <p><strong>Email:</strong> <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
         <!--
-        <div class="header-content">
-            <h1>Hengyi Yin</h1>
-            <p>B.Eng | McGill University</p>
-        </div>
+        <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
         -->
+        <!-- 社交媒体链接 -->
+        <div class="social-links">
+            <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
+        </div>
+    </aside>
+
+    <header>
         <!-- 导航链接 -->
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">Curriculum Vitae</a></li>
+                <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
             </ul>
         </nav>
@@ -44,26 +40,41 @@
     </header>
 
     <div class="container">
-        
-
         <!-- 主要内容 -->
         <main>
             <!-- Publications 内容 -->
             <section id="publications">
                 <h2>Publications</h2>
-                <ul>
-                    <li>Title of Paper One, Journal Name, Year.</li>
-                    <li>Title of Paper Two, Journal Name, Year.</li>
-                    <li>Title of Paper Three, Journal Name, Year.</li>
-                    <!-- 添加更多论文 -->
+                <ul class="publications-list">
+                    <li>
+                        <strong>Title:</strong> <a href="https://ieeexplore.ieee.org/document/10274148" target="_blank">A Capacitance Estimation Method for DC-Link Capacitors in Railways Based on Precharging Model and Low Sampling Frequency</a><br>
+                        <strong>Journal:</strong> <em>IEEE Transactions on Power Electronics</em>, Jan 2024, Volume 39, Issue 1, Pages 1527-1537.<br>
+                        <strong>Author:</strong> Xun Wu, Kaidi Li, Rui Tian, <strong>Hengyi Yin</strong>, Tianjia Yu, Shu Cheng, Chunyang Chen
+                    </li>
+                <!--
+                    <li>
+                        <strong>Title:</strong> <a href="https://your-publication-link2.com" target="_blank">Advanced Control Strategies for High-Efficiency Electric Motors in Industrial Applications</a><br>
+                        <strong>Journal:</strong> <em>Journal of Electrical Engineering</em>, Mar 2023, Volume 45, Issue 3, Pages 987-998.<br>
+                        <strong>Author:</strong> Ling Zhang, <strong>Hengyi Yin</strong>, Mei Ling, Wei Chen
+                    </li>
+                    <li>
+                        <strong>Title:</strong> <a href="https://your-publication-link3.com" target="_blank">Optimization Techniques for Renewable Energy Systems Integration in Smart Grids</a><br>
+                        <strong>Journal:</strong> <em>Renewable Energy Journal</em>, Jul 2022, Volume 58, Issue 7, Pages 2045-2056.<br>
+                        <strong>Author:</strong> Hao Li, Jie Wang, <strong>Hengyi Yin</strong>, Xinyi Liu
+                    </li>
+                -->
+                    <!-- 可以继续添加更多出版物 -->
                 </ul>
             </section>
         </main>
     </div>
 
+    <!-- 底部 -->
+    <!--
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Hengyi Yin. All rights reserved.</p>
     </footer>
+    -->
 
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
