--- a/publications.html
+++ b/publications.html
@@ -13,12 +13,10 @@
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
         <h2>Hengyi Yin</h2>
-        <p><strong>B.Eng</strong></p>
-        <p><strong>McGill University</strong></p>
-        <p><strong>Email:</strong> <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
-        <!--
-        <p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p>
-        -->
+        <p></strong> B.Eng</p>
+        <p></strong> McGill University</p>
+        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
+        <!--<p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
