--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
         <h2>Hengyi Yin</h2>
-        <p></strong> B.Eng</p>
-        <p></strong> McGill University</p>
-        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
+        <p><strong> B.Eng</strong></p>
+        <p><strong> McGill University</strong></p>
+        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <!--<p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
         <!-- 社交媒体链接 -->
         <div class="social-links">
-            <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
+            <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
         </div>
     </aside>
     
