--- a/cv.html
+++ b/cv.html
@@ -1,85 +1,98 @@
-<!DOCTYPE html>
-<html lang="en-US">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae - Hengyi Yin</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- 可以添加 Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-    <!-- 侧边栏 -->
-    <aside class="sidebar">
-        <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
-        <p></strong> B.Eng</p>
-        <p></strong> McGill University</p>
-        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
-        <!--<p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
-        <!-- 社交媒体链接 -->
-        <div class="social-links">
-            <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
+    <!DOCTYPE html>
+    <html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Curriculum Vitae - Hengyi Yin</title>
+        <link rel="stylesheet" href="styles.css">
+        <!-- 可以添加 Google Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <!-- 侧边栏 -->
+        <aside class="sidebar">
+            <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
+            <h2>Hengyi Yin</h2>
+            <p><strong>B.Eng</strong></p>
+            <p><strong>McGill University</strong></p>
+            <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
+            <!-- 社交媒体链接 -->
+            <div class="social-links">
+                <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
+                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
+            </div>
+        </aside>
+
+        <header>
+            <!-- 导航链接 -->
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                </ul>
+            </nav>
+            <!-- 主题切换按钮 -->
+            <button id="theme-toggle">Switch to Dark Mode</button>
+        </header>
+
+        <div class="container">
+            <!-- 主要内容 -->
+            <main>
+                <!-- CV 内容 -->
+                <section id="cv">
+                    <h2>Curriculum Vitae</h2>
+                    
+                    <!-- 教育背景 -->
+                    <h3>Education</h3>
+                    <ul>
+                        <li>B.Eng. in Electrical Engineering, McGill University, 2025</li>
+                    </ul>
+
+                    <!-- 工作经历 -->
+                    <h3>Work Experience</h3>
+                    <ul class="work-experience">
+                        <li class="accordion-item">
+                            <button class="accordion-header">AI Engineer, Huawei Technologies Co., Ltd, Jun. 2024 -- Sep. 2024</button>
+                            <div class="accordion-content">
+                                <p><strong>Roles & Achievements:</strong></p>
+                                <ul>
+                                    <li>Participated in a prompt competition, fine-tuning methods using Retrieval-Augmented Generation, Supervised Fine-Tuning, Self-Code Collaboration, and Multi-Agent systems to enhance model performance.</li>
+                                    <li>Applied the above techniques to fine-tune the internal large language model, enabling issue diagnosis assistance, automated code review, and inspection functionality.</li>
+                                    <li>Developed automatic error code extraction tools to streamline debugging processes in Python, Go, and Java projects.</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="accordion-item">
+                            <button class="accordion-header">Research Assistant, Central South University, School of Traffic & Transportation Engineering, Apr. 2023 -- Sep. 2023</button>
+                            <div class="accordion-content">
+                                <p><strong>Roles & Achievements:</strong></p>
+                                <ul>
+                                    <li>Developed machine learning prediction models in MATLAB and optimized them for better performance.</li>
+                                    <li>Conducted simulations to collect data and fine-tuned models using Simulink.</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <!-- 可以继续添加更多实习经历 -->
+                    </ul>
+
+                    <!-- 技能 -->
+                    <h3>Skills</h3>
+                    <ul>
+                        <li>Programming Languages: Python, Java, C++</li>
+                        <li>Tools: Git, Docker, Google Cloud Platform, Jupyter Notebooks, PyCharm, Eclipse</li>
+                        <li>Frameworks: TensorFlow, PyTorch, Keras</li>
+                        <li>Libraries: OpenCV, Scikit-learn, Pandas, Transformers, NumPy, Matplotlib</li>
+                    </ul>
+                </section>
+            </main>
         </div>
-    </aside>
-    <header>
         <!--
-        <div class="header-content">
-            <h1>Hengyi Yin</h1>
-            <p>B.Eng | McGill University</p>
-        </div>
+        <footer>
+            <p>&copy; 2024 Hengyi Yin. All rights reserved.</p>
+        </footer>
         -->
-        <!-- 导航链接 -->
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="publications.html">Publications</a></li>
-            </ul>
-        </nav>
-        <!-- 主题切换按钮 -->
-        <button id="theme-toggle">Switch to Dark Mode</button>
-    </header>
-
-    <div class="container">
-    
-
-        <!-- 主要内容 -->
-        <main>
-            <!-- CV 内容 -->
-            <section id="cv">
-                <h2>Curriculum Vitae</h2>
-                <!-- 示例内容 -->
-                <h3>Education</h3>
-                <ul>
-                    <!--<li>Ph.D. in Computer Science, University Name, Year</li>
-                    <li>M.Sc. in Computer Science, University Name, Year</li> -->
-                    <li>B.Eng. in Electrical Engineering, McGill University, 2025</li>
-                </ul>
-
-                <h3>Work Experience</h3>
-                <ul>
-                    <li>AI Engineer, Huawei Technologies Co., Ltd, Jun. 2024 -- Sep. 2024</li>
-                    <li>Research Assistant, Central South University, School of Traffic \& Transportation Engineering, Apr. 2023 -- Sep. 2023</li>
-                </ul>
-
-                <h3>Skills</h3>
-                <ul>
-                    <li>Programming Languages: Python, Java, C++</li>
-                    <li>Tools: Git, Docker, Google Cloud Platform, Jupyter Notebooks, PyCharm,  Eclipse</li>
-                    <li>Frameworks: TensorFlow, PyTorch, Keras</li>
-                    <li>Libraries: OpenCV, Skikit-learn, Pandas,  Transformers, NumPy, Matplotlib</li>
-                </ul>
-            </section>
-        </main>
-    </div>
-<!--
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
--->
-    <!-- JavaScript 脚本 -->
-    <script src="script.js"></script>
-</body>
-</html>
+        <!-- JavaScript 脚本 -->
+        <script src="script.js"></script>
+    </body>
+    </html>
