--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Homepage - Hengyi Yin</title>
+    <title>Publications - Hengyi Yin</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- 可以添加 Google Fonts -->
+    <!-- 添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- 内联主题脚本 -->
     <script>
@@ -22,27 +22,21 @@
     </script>
 </head>
 <body>
+    <!-- 侧边栏 -->
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
         <h2>Hengyi Yin</h2>
-        <p><strong> B.Eng</strong></p>
-        <p><strong> McGill University</strong></p>
+        <p><strong>B.Eng</strong></p>
+        <p><strong>McGill University</strong></p>
         <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
-        <!--<p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
         </div>
     </aside>
-    
+
     <header>
-        <!--
-        <div class="header-content">
-            <h1>Hengyi Yin</h1>
-            <p>B.Eng | McGill University</p>
-        </div>
-        -->
         <!-- 导航链接 -->
         <nav class="main-nav">
             <ul>
@@ -57,39 +51,43 @@
     </header>
 
     <div class="container">
-       
-
         <!-- 主要内容 -->
         <main>
-            <!-- 关于我 -->
-            <section id="about">
-                <h2>About Me</h2>
-                <p>My name is Hengyi Yin and welcome to my personal website!</p>
-            </section>
-
-            <!-- 研究方向 -->
-            <section id="research">
-                <h2>Research Interests</h2>
-                <ul>
-                    <li>Deep learning</li>
-                    <li>Large language model</li>
-                    <li>Reinforce learning</li>
-                </ul>
-            </section>
-
-            <!-- 联系方式 -->
-            <section id="contact">
-                <h2>Contact</h2>
-                <p>Email: <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
-                <!-- <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.co</a></p> -->
+            <!-- Projects Section -->
+            <section id="projects">
+                <h2>Projects</h2>
+                <div class="projects-grid">
+                    <!-- 项目1 -->
+                    <div class="project-card">
+                        <!--<img src="images/project1.jpg" alt="Project 1 Image" class="project-image">-->
+                        <h3 class="project-title"></h3>
+                        <p class="project-description">简要描述项目一的内容、目标和成果。</p>
+                        <a href="https://github.com/yourusername/project1" target="_blank" class="project-link">查看项目</a>
+                    </div>
+                    <!-- 项目2 -->
+                    <div class="project-card">
+                        <!--<img src="images/project2.jpg" alt="Project 2 Image" class="project-image">-->
+                        <h3 class="project-title">Project Title Two</h3>
+                        <p class="project-description">简要描述项目二的内容、目标和成果。</p>
+                        <a href="https://github.com/yourusername/project2" target="_blank" class="project-link">查看项目</a>
+                    </div>
+                    <!-- 项目3 -->
+                    <div class="project-card">
+                        <!--<img src="images/project3.jpg" alt="Project 3 Image" class="project-image">-->
+                        <h3 class="project-title">Project Title Three</h3>
+                        <p class="project-description">简要描述项目三的内容、目标和成果。</p>
+                        <a href="https://github.com/yourusername/project3" target="_blank" class="project-link">查看项目</a>
+                    </div>
+                    <!-- 你可以继续添加更多项目 -->
+                </div>
             </section>
         </main>
     </div>
-<!--
+
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
--->
+
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
 </body>
