--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hengyi Yin</h2>
         <p><strong> B.Eng</strong></p>
         <p><strong> McGill University</strong></p>
-        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
+        <p><strong> <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <!--<p><strong>Research Website:</strong> <a href="https://your-research-website.com" target="_blank">your-research-website.com</a></p> -->
         <!-- 社交媒体链接 -->
         <div class="social-links">
@@ -49,7 +49,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">Curriculum Vitae</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="projects.html">Projects</a></li> <!-- 新增项目链接 -->
+                <!-- <li><a href="projects.html">Projects</a></li> 新增项目链接 -->
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
