--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <h2>Hengyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
-        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
+        <p><strong> <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
@@ -43,7 +43,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">Curriculum Vitae</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="projects.html">Projects</a></li> <!-- 新增项目链接 -->
+                <!-- <li><a href="projects.html">Projects</a></li> 新增项目链接 -->
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
@@ -60,22 +60,22 @@
                     <!-- 项目1 -->
                     <div class="project-card">
                         <!--<img src="images/project1.jpg" alt="Project 1 Image" class="project-image">-->
-                        <h3 class="project-title"></h3>
-                        <p class="project-description">简要描述项目一的内容、目标和成果。</p>
+                        <h3 class="project-title">Project One</h3>
+                        <p class="project-description">Describe it </p>
                         <a href="https://github.com/yourusername/project1" target="_blank" class="project-link">查看项目</a>
                     </div>
                     <!-- 项目2 -->
                     <div class="project-card">
                         <!--<img src="images/project2.jpg" alt="Project 2 Image" class="project-image">-->
-                        <h3 class="project-title">Project Title Two</h3>
-                        <p class="project-description">简要描述项目二的内容、目标和成果。</p>
+                        <h3 class="project-title">Project Two</h3>
+                        <p class="project-description">Describe it </p>
                         <a href="https://github.com/yourusername/project2" target="_blank" class="project-link">查看项目</a>
                     </div>
                     <!-- 项目3 -->
                     <div class="project-card">
                         <!--<img src="images/project3.jpg" alt="Project 3 Image" class="project-image">-->
-                        <h3 class="project-title">Project Title Three</h3>
-                        <p class="project-description">简要描述项目三的内容、目标和成果。</p>
+                        <h3 class="project-title">Project Three</h3>
+                        <p class="project-description">Describe it </p>
                         <a href="https://github.com/yourusername/project3" target="_blank" class="project-link">查看项目</a>
                     </div>
                     <!-- 你可以继续添加更多项目 -->
