--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
         <h2>Hengyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
-        <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
+        <p><strong> <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
@@ -42,7 +42,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">Curriculum Vitae</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="projects.html">Projects</a></li> <!-- 新增项目链接 -->
+                <!--<li><a href="projects.html">Projects</a></li>  新增项目链接 -->
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
