--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2>Research Interests</h2>
                 <ul>
                     <li>Deep learning</li>
-                    <li>Large language model</li>
+                    <li>Natural Language Process</li>
                     <li>Reinforce learning</li>
                 </ul>
             </section>
