--- a/cv.html
+++ b/cv.html
@@ -83,11 +83,12 @@
                 <!-- 竞赛经历 -->
                 <h3>Competitions</h3>
                 <ul>
-                    <li>Achieved 3rd place among 76 teams in McGill CodeJam14 Hackathon, focusing on Large Language Model (LLM) applications.</li>
+                    <li>Achieved 3rd place among 76 teams and 280+ participants in McGill CodeJam14 Hackathon, focusing on Large Language Model (LLM) applications. <a href="https://devpost.com/software/maestro-qs6gr1" target="_blank">(Project Link)</a></li>
                     <li>Delivered a prototype using RAG, Sentence-Transformers, and semantic search, achieving 95%+ accuracy in contextual query retrieval.</li>
                     <li>Collaborated in a team of four, effectively distributing tasks and maintaining strong communication throughout the competition.</li>
                 </ul>
                 
+
                 <!-- 项目经历 -->
                 <h3>Projects</h3>
                 <ul>
