--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="music.html">Music Room</a></li>
+
             </ul>
         </nav>
         <button id="theme-toggle">Switch to Dark Mode</button>
