--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="music.html">Music Room</a></li>
+
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
@@ -69,7 +71,8 @@
                 <h2>Contact</h2>
                 <p>Email: <a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></p>
                 <!-- <p>Research Website: <a href="https://your-research-website.com" target="_blank">your-research-website.co</a></p> -->
-            </section>
+            
+            
         </main>
     </div>
 <!--
