--- a/publications.html
+++ b/publications.html
@@ -30,6 +30,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="music.html">Music Room</a></li>
+
             </ul>
         </nav>
         <!-- 主题切换按钮 -->
