--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications - Hengyi Yin</title>
+    
+    <!-- 提前应用存储的主题，防止闪烁 -->
+    <script>
+        (function() {
+            const savedTheme = localStorage.getItem('theme') || 'light-theme';
+            document.body.classList.add(savedTheme);
+        })();
+    </script>
+
     <link rel="stylesheet" href="styles.css">
     <!-- 添加 Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
