--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="music.html">Music Room</a></li>
 
             </ul>
@@ -60,7 +61,7 @@
             <!-- 关于我 -->
             <section id="about">
                 <h2>About Me</h2>
-                <p>Hi! I'm Hengyi. An AI Developer specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
+                <p>Hi! I'm Hengyi. An AI Engineer specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
                     developing and deploying state-of-the-art language models. I love Piano, animes and anything may change the world!</p>
             </section>
 
@@ -83,11 +84,12 @@
             
         </main>
     </div>
-<!--
+
+    <!-- 页脚 -->
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Hengyi Yin. All rights reserved.</p>
     </footer>
--->
+    
     <!-- JavaScript 脚本 -->
     <script src="script.js"> </script>
 </body>
