--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="music.html">Music Room</a></li>
 
             </ul>
@@ -77,12 +78,11 @@
         </main>
     </div>
 
-    <!-- 底部 -->
-    <!--
+
+    <!-- 页脚 -->
     <footer>
-        <p>&copy; 2024 Hengyi Yin. All rights reserved.</p>
+        <p>&copy; 2025 Hengyi Yin. All rights reserved.</p>
     </footer>
-    -->
 
     <!-- JavaScript 脚本 -->
     <script src="script.js"></script>
