--- a/cv.html
+++ b/cv.html
@@ -39,6 +39,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="music.html">Music Room</a></li>
 
             </ul>
@@ -112,7 +113,12 @@
             </section>
         </main>
     </div>
-
+    
+    <!-- 页脚 -->
+    <footer>
+        <p>&copy; 2025 Hengyi Yin. All rights reserved.</p>
+    </footer>
+    
     <!-- JavaScript 引入 -->
     <script>
             // 提前读取存储的主题并应用
