--- a/music.html
+++ b/music.html
@@ -36,6 +36,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="music.html">Music Room</a></li>
             </ul>
         </nav>
@@ -133,6 +134,12 @@
         </main>
     </div>
 
+    
+    <!-- 页脚 -->
+    <footer>
+        <p>&copy; 2025 Hengyi Yin. All rights reserved.</p>
+    </footer>
+    
     <!-- JavaScript 文件 -->
     <script src="script.js"></script>
     <script>
