--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,7 @@
                 <ul class="work-experience">
                     <!-- 手风琴组件项 -->
                     <li class="accordion-item">
-                        <button class="accordion-header">AI Engineer, Huawei Technologies Co., Ltd, Jun. 2024 – Sep. 2024</button>
+                        <button class="accordion-header">AI Engineer Intern, Huawei Technologies Co., Ltd, Jun. 2024 – Sep. 2024</button>
                         <div class="accordion-content">
                             <ul>
                                 <li>Enhanced company-specific LLM’s capabilities in code understanding, debugging, and document generation through techniques like Retrieval-Augmented Generation (RAG) and multi-agent systems, increasing debugging efficiency by 25%.</li>
@@ -118,7 +118,7 @@
     <footer>
         <p>&copy; 2025 Hengyi Yin. All rights reserved.</p>
     </footer>
-    
+
     <!-- JavaScript 引入 -->
     <script>
             // 提前读取存储的主题并应用
