--- a/music.html
+++ b/music.html
@@ -18,13 +18,13 @@
     <!-- 侧边栏 -->
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
+        <h2>Hennyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
         <p><strong><a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
+            <a href="https://www.linkedin.com/in/hengyi-yin/" target="_blank">LinkedIn</a></strong>
         </div>
     </aside>
 
@@ -77,6 +77,14 @@
                                 <span>Piano Man</span>
                                 <span>05:40</span>
                             </li>
+                            <li data-src="musics\Ziggy Stardust (2012 Remaster).mp3 " style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
+                                <span>Ziggy Stardust (2012 Remaster)</span>
+                                <span>03:13</span>
+                            </li>  
+                            <li data-src="musics\Rock 'n' Roll Suicide (2012 Remaster).mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
+                                <span>Rock 'n' Roll Suicide (2012 Remaster)</span>
+                                <span>02:58</span>
+                            </li> 
                             <li data-src="musics\La Vie En Rose.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
                                 <span>La Vie En Rose</span>
                                 <span>03:07</span>
@@ -121,8 +129,14 @@
                                 <span>Moon River</span>
                                 <span>02:15</span>
                             </li>
-                            
-                            
+                            <li data-src="musics\evening.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
+                                <span>evening</span>
+                                <span>04:17</span>
+                            </li>
+                            <li data-src="musics\Sparks.mp3" style="display: flex; justify-content: space-between; align-items: center; padding: 10px; cursor: pointer;">
+                                <span>Sparks</span>
+                                <span>03:47</span>
+                            </li>                  
                         </ul>
                     </div>
                 </div>
