--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <!-- Sidebar Section -->
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
+        <h2>Hennyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
         <p><strong><a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
@@ -29,7 +29,7 @@
         <div class="social-links">
             <strong>
                 <a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-                <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/hengyi-yin/" target="_blank">LinkedIn</a>
             </strong>
         </div>
     </aside>
