--- a/publications.html
+++ b/publications.html
@@ -21,14 +21,14 @@
     <!-- 侧边栏 -->
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
+        <h2>Hennyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
         <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
+            <a href="https://www.linkedin.com/in/hengyi-yin/" target="_blank">LinkedIn</a></strong>
         </div>
     </aside>
 
