--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- 社交媒体链接 -->
         <div class="social-links">
             <strong><a href="https://github.com/hennyi-yin" target="_blank">GitHub</a> |
-            <a href="https://www.linkedin.com/in/hengyi-yin-6b8ab0290/" target="_blank">LinkedIn</a></strong>
+            <a href="https://www.linkedin.com/in/hengyi-yin/" target="_blank">LinkedIn</a></strong>
         </div>
     </aside>
     
