--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
     <!-- 侧边栏部分 -->
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
+        <h2>Hennyi Yin</h2>
         <p><strong>B.Eng</strong></p>
         <p><strong>McGill University</strong></p>
         <p><strong><a href="mailto:hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
