--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <aside class="sidebar">
         <img src="images/profile.jpeg" alt="Profile Picture" class="profile-pic">
-        <h2>Hengyi Yin</h2>
+        <h2>Hennyi Yin</h2>
         <p><strong> B.Eng</strong></p>
         <p><strong> McGill University</strong></p>
         <p><strong> <a href="hengyi.yin@mail.mcgill.ca">hengyi.yin@mail.mcgill.ca</a></strong></p>
