--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                         <button class="accordion-header">Maestro</button>
                         <div class="accordion-content">
                             <!-- <img src="images/maestro.jpg" alt="Maestro Project Image" class="project-img"> -->
-                            <p><strong>Project Description:</strong> Maestro is an innovative workflow automation tool designed to enhance productivity by leveraging advanced machine learning algorithms. It intelligently automates repetitive tasks, integrates seamlessly with various APIs, and provides insightful analytics to help users make data-driven decisions.</p>
+                            <p><strong>Project Description:</strong> Finished in a 36 hours hackathon. Maestro is an innovative workflow automation tool designed to enhance productivity by leveraging advanced machine learning algorithms. It intelligently automates repetitive tasks, integrates seamlessly with various APIs, and provides insightful analytics to help users make data-driven decisions.</p>
                             
                             <p><strong>Technologies Used:</strong></p>
                             <ul>
@@ -98,7 +98,7 @@
                         <button class="accordion-header">OnlyTrades</button>
                         <div class="accordion-content">
                             <!-- <img src="images/onlytrades.jpg" alt="OnlyTrades Project Image" class="project-img"> -->
-                            <p><strong>Project Description:</strong> OnlyTrades is a secure and transparent trading platform that utilizes advanced machine learning techniques for stock price prediction analysis. The platform leverages historical data and real-time analytics to provide users with accurate trading insights.</p>
+                            <p><strong>Project Description:</strong> Finished in a 24 hours hackathon. OnlyTrades is a secure and transparent trading platform that utilizes advanced machine learning techniques for stock price prediction analysis. The platform leverages historical data and real-time analytics to provide users with accurate trading insights.</p>
                             
                             <p><strong>Technologies Used:</strong></p>
                             <ul>
