--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header>
         <!--
         <div class="header-content">
-            <h1>Hengyi Yin</h1>
+            <h1>Hennyi Yin</h1>
             <p>B.Eng | McGill University</p>
         </div>
         -->
@@ -61,7 +61,7 @@
             <!-- 关于我 -->
             <section id="about">
                 <h2>About Me</h2>
-                <p>Hi! I'm Hengyi. An AI Engineer specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
+                <p>Hi! I'm Hennyi. An AI Engineer specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
                     developing and deploying state-of-the-art language models. I love Piano, animes and anything may change the world!</p>
             </section>
 
