--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- 关于我 -->
             <section id="about">
                 <h2>About Me</h2>
-                <p>Hi! I'm Hennyi. An AI Engineer specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
+                <p>Hi! I'm Hennyi. An ECSE student specializing in Machine Learning, Deep Learning, and Natural Language Processing with experience in
                     developing and deploying state-of-the-art language models. I love Piano, animes and anything may change the world!</p>
             </section>
 
